# Crewai-flows

./: Readme.md  pyproject.toml
Basic_flow_example/: Readme.md  pyproject.toml  requirements.txt
Basic_flow_example/src/Basic_flow/: Basic_flow.py
src/Basic_flow/: Basic_flow.py
